# coding-quest

./: .gitignore  LICENSE  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
.github/workflows/: test.yml
coding_quest/: __init__.py  generate.py
coding_quest/templates/: solution.py.j2  test.py.j2
coding_quest_2022/: day01.py  day01_test.py  day02.py  day02_test.py  day03.py  day03_test.py  day05.py  day05_test.py
coding_quest_2023/: day01.py  day01_test.py  day02.py  day02_test.py  day04.py  day04_test.py  day05.py  day05_test.py
coding_quest_2024/: day01.py  day01_test.py  day02.py  day02_test.py  day03.py  day03_test.py  day04.py  day04_test.py  day05.py  day05_test.py
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/com/github/sanderploegsma/codingquest/: Year2022Day01.kt  Year2022Day02.kt  Year2022Day03.kt  Year2024Day01.kt  Year2024Day02.kt
src/main/resources/: 2022-01.txt
src/test/kotlin/com/github/sanderploegsma/codingquest/: Year2022Day01Test.kt  Year2022Day02Test.kt  Year2022Day03Test.kt  Year2024Day01Test.kt  Year2024Day02Test.kt
