[tool.poetry]
name = "coding-quest"
version = "0.1.0"
description = "Solutions to codingquest.io"
authors = ["Sander Ploegsma <sanderploegsma@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
generate = "coding_quest.generate:main"

[tool.poetry.dependencies]
python = "^3.12"
alive-progress = "^3.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
jinja2 = "^3.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
