[tool.poetry]
name = "coding-quest"
version = "0.1.0"
description = "Solutions to codingquest.io"
authors = ["Sander Ploegsma <sanderploegsma@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
generate = "coding_quest.generate:main"

[tool.poetry.dependencies]
python = "^3.12"
alive-progress = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"
jinja2 = "^3.1.6"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
